syntax = "proto3";
import "user.proto";
package rpc.feed;
option go_package = "rpc/feed";

message Video {
  uint32 id = 1;
  user.User author = 2;
  string play_url = 3;
  string cover_url = 4;
  uint32 favorite_count = 5;
  uint32 comment_count = 6;
  bool is_favorite = 7;
  string title = 8;
}

message ListFeedRequest {
  optional string latest_time = 1;
  optional uint32 actor_id = 2;
}

message ListFeedResponse {
  uint32 status_code = 1;
  optional string status_msg = 2;
  optional int64 next_time = 3;
  repeated Video video_list = 4;
}

message QueryVideosRequest {
  uint32 actor_id = 1;
  repeated uint32 video_ids = 2;
}

message QueryVideosResponse {
  uint32 status_code = 1;
  optional string status_msg = 2;
  repeated Video video_list = 3;
}

service FeedService {
  rpc ListVideos(ListFeedRequest) returns (ListFeedResponse);
  rpc QueryVideos(QueryVideosRequest) returns (QueryVideosResponse);
}
